# vault

./: .gitignore  docker-compose.yaml  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: Caddyfile  deploy.yaml
apps/admin/: .env.example  next.config.mjs  package-lock.json  package.json  resource.txt  tailwind.config.ts  tsconfig.json
apps/admin/prisma/: schema.prisma
apps/admin/src/app/: layout.tsx  page.tsx
apps/admin/src/components/: Datatable.tsx
apps/admin/src/hooks/: useAuthRedirect.tsx
apps/admin/src/lib/: middleware.ts  token.ts
apps/backend/: .gitignore  package.json
apps/backend/prisma/: schema.prisma  seed.ts
apps/backend/src/: app.module.ts  main.ts
apps/backend/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts  config.ts
apps/backend/src/core/: config.ts
apps/backend/src/kyc/: kyc.controller.ts  kyc.service.ts
apps/backend/src/users/: users.controller.ts  users.service.ts
apps/frontend/: package.json
apps/frontend/src/pages/: index.tsx
apps/frontend/src/utils/: trpc.ts
apps/kyc-service/: app.py  deployed-address.json  hardhat.config.js  package-lock.json  package.json  pyproject.toml  server.js
apps/kyc-service/brownie_project/contracts/: KYC.sol
apps/kyc-service/brownie_project/scripts/: brownie_interface.py
apps/kyc-service/contracts/: KYC.sol
apps/kyc-service/controller/: api.js
apps/kyc-service/scripts/: deploy.js  interact.js
apps/user/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
brownie_project/scripts/: brownie_interface.py
(+101 files in other folders)
