[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "kyc-service"
version = "0.1.0"
description = ""
authors = ["Aashutosh Pudasaini <nepalidude3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
brownie = "^0.5.1"
eth-brownie = "^1.20.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
